# The_Anonimyzer

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py
