[tool.poetry]
name = "the-anonimyzer"
version = "0.1.0"
description = ""
authors = ["HeinerAlejandro <heiner.enis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.2"
black = "^23.10.0"
mypy = "^1.6.1"

[tool.mypy]
mypy_path = "./src"
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
